<?xml version="1.0"?>
<package format="3">
  <name>saravia_pkg</name>
  <version>0.0.1</version>
  <description>Paquete ROS 2 para reproducir rosbag de vehículo Nissan</description>
  <maintainer email="felipe@example.com">Felipe Saravia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
